# dafs

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  message.proto
contrib/: create-server.sh
dependencies/: CMakeLists.txt
dependencies/diflib/: CMakeLists.txt
dependencies/paxos/: CMakeLists.txt
dependencies/protobuf/: CMakeLists.txt
include/dafs/: blocks.hpp  callback.hpp  commit.hpp  components.hpp  constants.hpp  customhash.hpp  dafs-cli.hpp  dafs-server.hpp  delta.hpp  details.hpp  disk.hpp  dispatcher.hpp  filesystem.hpp  handler.hpp  identity.hpp  loader.hpp  main.hpp  messages.hpp  metadata.hpp  metadataparser.hpp  node.hpp  partition.hpp  prompt.hpp  propose.hpp  replicated.hpp  replication.hpp  result.hpp  sender.hpp  serialization.hpp  server.hpp  signal.hpp
proto/: CMakeLists.txt  message.proto
src/: CMakeLists.txt  allocator.hpp  blockcache.cpp  blockcache.hpp  blocks.cpp  callback.cpp  callback.hpp  commit.cpp  commit.hpp  components.cpp  config.ini  customhash.hpp  dafs-cli.cpp  dafs-server.cpp  delta.cpp  delta.hpp  details.cpp  disk.cpp  disk.hpp  dispatcher.cpp  dispatcher.hpp  files.cpp  files.hpp  filesystem.cpp  filesystem.hpp  handler.cpp  handler.hpp  identity.cpp  loader.cpp  loader.hpp  main.cpp  main.hpp  messages.cpp  messages.hpp  metadata.cpp  metadata.hpp  metadataparser.cpp  metadataparser.hpp  node.cpp  node.hpp  (+28 more)
unittests/: CMakeLists.txt  blocks_unittest.cpp  callback_unittest.cpp  commit_unittest.cpp  components_unittest.cpp  customhash_unittest.cpp  delta_unittest.cpp  details_unittest.cpp  disk_unittest.cpp  files_unittest.cpp  filesystem_unittest.cpp  handler_unittest.cpp  identity_unittest.cpp  messages_unittest.cpp  metadataparser_unittest.cpp  mock_partition.hpp  mock_replication.hpp  mock_sender.hpp  mocks.hpp  node_unittest.cpp  operations_unittest.cpp  partition_unittest.cpp  serialization_unittest.cpp  signal_unittest.cpp  storage_unittest.cpp  topology_unittest.cpp
